Postfix support Debian 10

--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -10,5 +10,9 @@ __postfix_aliases_default:
     postmaster: root
   "9":
     postmaster: root
+  "10":
+    postmaster: root
   "buster/sid":
+    postmaster: root
+  "buster":
     postmaster: root
